--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,6 +6,8 @@ body{
     font-family: "Poppins", sans-serif; 
 }
 
+
+
 .navbar-fixed {
     @apply fixed z-[9999] bg-white bg-opacity-70 backdrop-blur-sm dark:bg-dark dark:bg-opacity-50;
     box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
@@ -26,3 +28,14 @@ body{
   .hamburger-active > span:nth-child(3) {
     @apply -rotate-45;
   }
+
+
+  .notification-tab > .active {
+    @apply text-blue-500 border-b-blue-500 hover:text-blue-500;
+}
+.order-tab > .active {
+    @apply bg-blue-500 text-white hover:text-white;
+}
+.main.active {
+    @apply md:w-full md:ml-0;
+}
